--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="description" content="Meghna One page parallax responsive HTML Template ">
+	<meta name="description" content="One page parallax responsive HTML Template ">
 
-	<meta name="author" content="Muhammad Morshed">
+	<meta name="author" content="Rakshith M">
 
-	<title>Meghna | Responsive Multipurpose Parallax HTML5 Template</title>
+	<title></title>
 
 	<!-- Mobile Specific Meta
 		================================================== -->
